# or_algorithms_devops

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: BuildFlags.cmake  FindCatch.cmake  TestSolution.cmake
common/: format.h  prettyprint.hpp  timer.h
contrib/benchmark/src/: CMakeLists.txt
lab1/: CMakeLists.txt  README.md  kmp.h  naive.h  rabin_karp.h  test.cpp  utils.h
lab1/benchmarks/: good_t_2.txt  good_t_3.txt  good_t_4.txt
lab2/: 2approx.h  CMakeLists.txt  README.md  bnb.h  dp.h  fptas.h  test.cpp  utils.h
lab3/: CMakeLists.txt  README.md  knapsack.h  knapsack_draw.ipynb  test.cpp  tsp.cpp  tsp.h  tsp_draw.ipynb  utils.h
lab3/benchmarks/tsp/: gr17.tsp
lab3/test_results/knapsack/: output.txt
lab3/test_results/tsp/: output.txt
lab4/: CMakeLists.txt  README.md  draw.ipynb  iterated_local_search.h  local_search.h  test.cpp
lab4/.ipynb_checkpoints/: draw-checkpoint.ipynb
lab4/test_results/ils/: output.txt  tai100a.sol  tai20a.sol  tai40a.sol  tai60a.sol  tai80a.sol
lab4/test_results/ls/: output.txt  tai100a.sol  tai20a.sol  tai40a.sol  tai60a.sol  tai80a.sol
lab5/: CMakeLists.txt  README.md  simulated_annealing.h  test.cpp
lab5/test_results/: 20x20.sol  24x40.sol  30x50.sol  30x90.sol  37x53.sol
myaction/: Dockerfile  entrypoint.sh
